--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
           <li><a href="/jobs">Explore</a></li>
           <li><a href="#">Become a Seller</a></li>
           <li><a href="/login" class="join-btn">Login</a></li>
+           <li><a href="/selectRole" class="join-btn">SignUp</a></li>
         </ul>
       </nav>
       <div class="mobile-menu-toggle">
