--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,8 @@
         <div class="message"><%= message %></div>
       <% } %>
 
-      <form action="/select-role" method="POST">
+      <!-- Changed action from /select-role to /login -->
+      <form action="/login" method="POST">
         <input type="text" name="username" placeholder="Username" value="<%= typeof username !== 'undefined' ? username : '' %>" required />
         
         <input type="password" name="password" placeholder="Password" required />
@@ -46,7 +47,7 @@
         <img src="https://pngimg.com/uploads/github/github_PNG80.png" alt="GitHub" />
       </div>
 
-      <p class="signup">Don't have an account? <a href="#">Signup</a></p>
+      <p class="signup">Don't have an account? <a href="/signup">Signup</a></p>
 
       <div class="footer-links">
         <a href="#">Terms & Conditions</a>
